[gd_scene load_steps=8 format=2]

[ext_resource path="res://assets/cards/grand.png" type="Texture" id=1]
[ext_resource path="res://assets/cards/leaves.png" type="Texture" id=2]
[ext_resource path="res://assets/cards/bells.png" type="Texture" id=3]
[ext_resource path="res://assets/cards/acorn.png" type="Texture" id=4]
[ext_resource path="res://assets/cards/hearts.png" type="Texture" id=5]
[ext_resource path="res://fonts/default30.tres" type="DynamicFont" id=6]
[ext_resource path="res://src/dialog/TrumpDialog.gd" type="Script" id=7]





[node name="TrumpDialog" type="WindowDialog"]
margin_left = -1.0
margin_right = 437.0
margin_bottom = 456.0
custom_constants/title_height = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 456.0
margin_bottom = 456.0
custom_constants/margin_right = 50
custom_constants/margin_top = 30
custom_constants/margin_left = 50
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 30.0
margin_right = 406.0
margin_bottom = 426.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 356.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 6 )
text = "Select Trump Color"

[node name="Acorn" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 63.0
margin_right = 356.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 6 )
text = " Acorn"
icon = ExtResource( 4 )
align = 0

[node name="Leaves" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 140.0
margin_right = 356.0
margin_bottom = 189.0
custom_fonts/font = ExtResource( 6 )
text = "Leaves"
icon = ExtResource( 2 )
align = 0

[node name="Hearts" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 209.0
margin_right = 356.0
margin_bottom = 258.0
custom_fonts/font = ExtResource( 6 )
text = " Hearts"
icon = ExtResource( 5 )
align = 0

[node name="Bells" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 278.0
margin_right = 356.0
margin_bottom = 327.0
custom_fonts/font = ExtResource( 6 )
text = " Bells"
icon = ExtResource( 3 )
align = 0

[node name="Grand" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 347.0
margin_right = 356.0
margin_bottom = 396.0
custom_fonts/font = ExtResource( 6 )
text = " Grand"
icon = ExtResource( 1 )
align = 0
[connection signal="pressed" from="MarginContainer/VBoxContainer/Acorn" to="." method="_on_Acorn_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Leaves" to="." method="_on_Leaves_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Hearts" to="." method="_on_Hearts_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Bells" to="." method="_on_Bells_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Grand" to="." method="_on_Grand_pressed"]
